# pencil

./: .gitignore  README.md  pyproject.toml
pencilai/: __init__.py  ai.py  cli.py  pencil.py
pencilai/models/: __init__.py  file_model.py  message_model.py
