[tool.poetry]
name = "pencilai"
version = "0.1.0"
description = ""
authors = ["harmonichemispheres <robby.boney@harmonichemispheres.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.30.1"
typer = "^0.12.3"
rich = "^13.7.1"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pencil = "pencilai.cli:cli"